--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Mocha",
             "request": "launch",
             "program": "${workspaceFolder}/node_modules/mocha/bin/mocha",
-            "args":["${workspaceFolder}/test/test_checkFile.js"],
+            //"args":["${workspaceFolder}/test/test_jsonPath.js"],
             "env": {"NODE_ENV": "development"}
         }
     ]
