--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@koa/validate",
-  "version": "1.0.7",
+  "version": "1.0.0",
   "description": "A koa params validate middleware.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nathanielheitsch/@koa/validate.git"
+    "url": "https://github.com/nathanielheitsch/koa-validate.git"
   },
   "keywords": [
     "web",
