--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A koa params validate middleware.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "./node_modules/eslint/bin/eslint.js . & ./node_modules/mocha/bin/mocha",
     "jsdoc": "jsdoc -c ./jsdoc.json"
   },
   "repository": {
