--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ out
 output
 
 # Coverage directory used by tools like istanbul
-coverage
+.nyc_output
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
