--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A koa params validate middleware.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/eslint/bin/eslint.js . & ./node_modules/mocha/bin/mocha",
+    "test": "./node_modules/eslint/bin/eslint.js . && ./node_modules/nyc/bin/nyc.js cover ./node_modules/mocha/bin/mocha",
+    "coveralls": "./node_modules/nyc/bin/nyc.js report --reporter=text-lcov | ./node_modules/coveralls/bin/coveralls.js",
     "jsdoc": "jsdoc -c ./jsdoc.json"
   },
   "repository": {
@@ -26,15 +27,15 @@
     "validator": "^5.2.0"
   },
   "devDependencies": {
-    "coveralls": "*",
+    "@koa/router": "8.0.8",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.1.0",
     "koa": "^2.7.0",
     "koa-body": "4.1.1",
-    "@koa/router": "8.0.8",
     "mocha": "^7.2.0",
     "nyc": "^15.0.1",
     "should": "*",
-    "supertest": "^0.13.0",
-    "eslint": "^7.1.0"
+    "supertest": "^0.13.0"
   },
   "engines": {
     "node": ">= 0.11.9"
