--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/eslint/bin/eslint.js . && ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha",
     "coveralls": "./node_modules/nyc/bin/nyc.js report --reporter=text-lcov | ./node_modules/coveralls/bin/coveralls.js",
-    "jsdoc": "./node_modules/jsdoc/jsdoc.js --destination ./docs -c ./jsdoc.json"
+    "jsdoc": "./node_modules/jsdoc/jsdoc.js --destination ./docs -R README.md -c ./jsdoc.json"
   },
   "repository": {
     "type": "git",
